Cleanup section padding on vision and problem, fix letter spacing on problem subtitle, fix problem items on mobile

--- a/app/assets/stylesheets/homepage/_ourvision.scss
+++ b/app/assets/stylesheets/homepage/_ourvision.scss
@@ -1,5 +1,7 @@
 .our-vision {
   position: relative;
+  padding-top: 70px;
+  padding-bottom: 50px;
   // // background-image: url("blue-rectangle@2x.jpg");
   // background-size: cover;
   // background-repeat: no-repeat;
